--- a/Desktop/kontakt-main/src/assets/Components/Main/Kampaniya/Kampaniya.css
+++ b/Desktop/kontakt-main/src/assets/Components/Main/Kampaniya/Kampaniya.css
@@ -1,10 +1,8 @@
-
-
 body {
     background: #F3F3F3;
 }
 
-.kampaniya {
+#kamp .kampaniya {
     width: 100%;
     height: auto;
     display: flex;
@@ -14,25 +12,24 @@ body {
     margin-top: 10px;
 }
 
-.cont-top {
+#kamp .cont-top {
     width: 99%;
     height: 70px;
     background: #fff;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
-.cont-top-sub {
+#kamp.cont-top-sub {
     width: 94%;
     height: 70px;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     background-color: #fff;
 }
 
-.cont-top-text {
+#kamp .cont-top-text {
     display: flex;
     align-items: center;
     width: 124.82px;
@@ -45,9 +42,10 @@ body {
     color: #111827;
     font-family: montserrat, sans-serif;
     background: #fff;
+    margin-left: 1.5rem;
 }
 
-.kompaniya-container {
+#kamp .kompaniya-container {
     width: 99%;
     height: 100vh;
     margin-top: 10px;
@@ -55,34 +53,34 @@ body {
     gap: 13px;
 }
 
-.kompaniya-left {
+#kamp .kompaniya-left {
     width: 19%;
     border-radius: 10px;
     position: sticky;
     overflow-y: auto;
 }
 
-.kompaniya-left::-webkit-scrollbar {
+#kamp .kompaniya-left::-webkit-scrollbar {
     width: 2px;
 }
 
-.kompaniya-left::-webkit-scrollbar-thumb {
+#kamp .kompaniya-left::-webkit-scrollbar-thumb {
     border-radius: 10px; 
     border: 2px solid #141111; 
 }
 
 
-.kompaniya-left::-webkit-scrollbar-track {
+#kamp .kompaniya-left::-webkit-scrollbar-track {
     background: #dbd8d8; 
 }
 
-.filter {
+#kamp .filter {
     width: 100%;
     border-radius: 10px;
     background-color: #fff;
 }
 
-.filter-top {
+#kamp .filter-top {
     width: 100%;
     height: 65px;
     display: flex;
@@ -91,7 +89,7 @@ body {
     border-bottom: 1px solid #eaeaea;
 }
 
-.filter-top-sub {
+#kamp .filter-top-sub {
     width: 85%;
     height: 65px;
     display: flex;
@@ -100,13 +98,13 @@ body {
    
 }
 
-.top-span {
+#kamp .top-span {
     color: #323232;
     font-family: montserrat, sans-serif;
     font-size: 16px;
 }
 
-.filter-icon {
+#kamp .filter-icon {
     font-size: 18px;
     color: #323232;
     font-family: montserrat, sans-serif;
@@ -114,7 +112,7 @@ body {
 
 }
 
-.filter-ul {
+#kamp .filter-ul {
     width: 100%;
     height: 64px;
     display: flex;
@@ -122,7 +120,7 @@ body {
     border-bottom: 1px solid #eaeaea;
 }
 
-.filter-li {
+#kamp .filter-li {
     width: 86%;
     height: 64px;
     display: flex;
@@ -130,7 +128,7 @@ body {
     cursor: pointer;
 }
 
-.filter-a {
+#kamp .filter-a {
     font-size: 14px;
     color: #323232;
     font-family: montserrat, sans-serif;
@@ -139,29 +137,29 @@ body {
 
 }
 
-.kompaniya-right {
+#kamp .kompaniya-right {
     width: 79%;
     height: auto;
     background: #F3F3F3;
 }
 
-.kontakt-img1 {
+#kamp .kontakt-img1 {
     width: 100%;
     height: 143.23px;
 }
 
-.kontakt-pic1 {
+#kamp .kontakt-pic1 {
     width: 100%;
     object-fit: cover;
 }
 
-.kontakt-endirim {
+#kamp .kontakt-endirim {
     width: 100%;
     height: 149.33px;
-    margin-top: 10px;
+    margin-top: 3%;
 }
 
-.kontakt-endirim-sub {
+#kamp .kontakt-endirim-sub {
     width: 100%;
     height: 129.33px;
     background-color: #fff;
@@ -171,7 +169,7 @@ body {
     align-items: center;
 }
 
-.endirim-textarea {
+#kamp .endirim-textarea {
     width: 95%;
     height: 78px;
     display: flex;
@@ -180,7 +178,7 @@ body {
     
 }
 
-.endirim-p1 {
+#kamp .endirim-p1 {
     font-weight: 700;
     color: #323232;
     font-family: montserrat, sans-serif;
@@ -188,7 +186,7 @@ body {
     height: 19.33px;
 }
 
-.endirim-p2 {
+#kamp .endirim-p2 {
     width: 97%;
     height: 58px;
     font-family: montserrat, sans-serif;
@@ -196,14 +194,14 @@ body {
     align-items: end;
 }
 
-.kompaniya-content {
+#kamp .kompaniya-content {
     width: 100%;
     height: auto;
     background: #F3F3F3;
    
 }
 
-.kompaniya-content-h2 {
+#kamp .kompaniya-content-h2 {
     height: 30px;
     width: 100%;
     font-size: 20px;
@@ -215,7 +213,7 @@ body {
     background-color: #F3F3F3;
 }
 
-.card-smartfonlar {
+#kamp .card-smartfonlar {
     width: 100%;
     height: auto;
     display: flex;
@@ -224,7 +222,7 @@ body {
     flex-wrap: wrap;
 }
 
-.card1-smartfon {
+#kamp .card1-smartfon {
     width: 236px;
     height: 369px;
     background-color: #fff;
@@ -236,16 +234,16 @@ body {
     transition: 0.5s;
 }
 
-.card1-smartfon:hover {
+#kamp .card1-smartfon:hover {
     box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
-.card1-smartfon-sub {
+#kamp .card1-smartfon-sub {
     width: 216px;
     height: 359px;
 }
 
-.card1-smartup {
+#kamp .card1-smartup {
     width: 216px;
     height: 30px;
     display: flex;
@@ -253,7 +251,7 @@ body {
     align-items: start;
 }
 
-.card1-time {
+#kamp .card1-time {
     width: 108.45px;
     height: 20px;
     color: #17a539;
@@ -272,7 +270,7 @@ body {
     border: none !important;
     
 }
-.time-span {
+#kamp .time-span {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -281,13 +279,13 @@ body {
     font-family: montserrat, sans-serif;
 }
 
-.truck-icon {
+#kamp .truck-icon {
     color: black;
     width: 20px;
     height: 12px;
 }
 
-.card1-compare {
+#kamp .card1-compare {
     width: 24px;
     height: 24px;
     display: flex;
@@ -297,12 +295,12 @@ body {
     border-radius: 5px;
 }
 
-.compare {
+#kamp .compare {
     width: 20px;
     height: 18px;
 }
 
-.card1-smartfon-mid {
+#kamp .card1-smartfon-mid {
     width: 216px;
     height: 138px;
     display: flex;
@@ -310,13 +308,13 @@ body {
     align-items: center;
 }
 
-.mid-img {
+#kamp .mid-img {
     width: 138px;
     height: 138px;
     object-fit: cover;
 }
 
-.smartfon-title {
+#kamp .smartfon-title {
     width: 216px;
     height: 33px;
     font-size: 12px;
@@ -328,13 +326,13 @@ body {
     margin-top: 8px;
 }
 
-.discount-smartfon {
+#kamp .discount-smartfon {
     width: 216px;
     height: 25px;
     margin-top: 5px;
 }
 
-.smartfon-discount-sub {
+#kamp .smartfon-discount-sub {
     width: 45.86px;
     height: 20px;
     color: #fff;
@@ -352,7 +350,7 @@ body {
     border: none !important;
 }
 
-.active-price {
+#kamp .active-price {
     width: 216px;
     height: 34px;
     display: flex;
@@ -361,12 +359,12 @@ body {
     margin-top: 6px;
 }
 
-.price-side {
+#kamp .price-side {
     width: 72.89px;
     height: 34px;
 }
 
-.price-i{
+#kamp .price-i{
     display: block;
     font-style: normal;
     text-decoration-line: line-through;
@@ -378,7 +376,7 @@ body {
     font-family: montserrat, sans-serif;
 }
 
-.price-b {
+#kamp .price-b {
     font-family: montserrat, sans-serif;
     color: #ff003c;
     font-size: 14px;
@@ -387,7 +385,7 @@ body {
     letter-spacing: -.02em;
 }
 
-.duration {
+#kamp .duration {
     font-family: montserrat, sans-serif;
     width: 49.6px;
     height: 20px;
@@ -398,7 +396,7 @@ body {
     line-height: 20px;
 }
 
-.card1-actions {
+#kamp .card1-actions {
     width: 216px;
     height: 36px;
     display: flex;
@@ -407,7 +405,7 @@ body {
     margin-top: 8px;
 }
 
-.heart-icon {
+#kamp .heart-icon {
     width: 36px;
     height: 36px;
     border-radius: 10px;
@@ -417,7 +415,7 @@ body {
     align-items: center;
 }
 
-.heart-iconsub {
+#kamp .heart-iconsub {
     font-size: 20px;
     /* color: #1D4ED8D9; */
     color: #323232;;
@@ -425,7 +423,7 @@ body {
     font-weight: 600;
 }
 
-.action-btn {
+#kamp .action-btn {
     width: 170px;
     height: 36px;
     border-radius: 10px;
@@ -438,7 +436,7 @@ body {
     gap: 5px;
 }
 
-.btn-text {
+#kamp .btn-text {
 font-size: 14px;
 font-family: montserrat, sans-serif;
 font-weight: 500;
@@ -446,7 +444,7 @@ font-weight: 500;
     line-height: 20px;
 }
 
-.more-offer {
+#kamp .more-offer {
     width: 100%;
     height: 40px;
     background-color: #fff;
@@ -460,13 +458,13 @@ font-weight: 500;
     transition: 0.5s;
 }
 
-.more-offer:hover {
+#kamp .more-offer:hover {
     opacity: 0.5;
     text-decoration: underline;
 
 }
 
-.sub-offer {
+#kamp .sub-offer {
     width: 100%;
     height: 20px;
     display: flex;
@@ -480,7 +478,7 @@ font-weight: 500;
     font-family: montserrat, sans-serif;
 }
 
-.qulaqliqlar {
+#kamp .qulaqliqlar {
     width: 100%;
     height: 60px;
     display: flex;
@@ -488,11 +486,47 @@ font-weight: 500;
     align-items: end;
 }
 
-.title-qulaqliq {
+#kamp .title-qulaqliq {
     font-size: 20px;
     font-weight: 600;
     letter-spacing: -.03em;
     line-height: 30px;
     font-family: montserrat, sans-serif;
     color: #323232;;
+}
+
+@media (max-width:992px) {
+    .kompaniya-left {
+        display: none;
+    }
+
+    #kamp .kompaniya-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    #kamp .card-smartfonlar {
+        gap: 10px;
+    }
+
+    #kamp .endirim-textarea {
+        font-size: 14px;
+        display: flex;
+        gap: 10px;
+    }
+}
+
+
+@media (max-width:992px) {
+
+    #kamp .kompaniya-right {
+        width: 95%;
+    }
+
+    #kamp .endirim-textarea {
+        font-size: 12px;
+        gap: 10px;
+    }
 }
